# gova-frontend

./: .env.example  .env.production  .gitignore  README.md  index.html  nginx.conf  orval.config.ts  package-lock.json  package.json
backend/: .gitignore  pyproject.toml
backend/src/: .env.template  a.py  config.py  db_models.py  docker-compose.yaml  main.py  pyproject.toml  test.py
backend/src/alembic/versions/: 4bb95c8aaab4_added_authenticated_at_field.py  7fc4741da732_added_conf_field_to_moderator_.py  88a07775aca2_added_deployment_id_field_to_moderator_.py  aa2c69d52734_added_deployment_id_field_to_message_.py  bae50b58d554_created.py  d6f6183fa3bc_added_connections_field_to_users.py  ee70ed94a2a1_created_separate_messages_and_message_.py  f9edc44f4894_added_name_field_to_moderator_.py
backend/src/core/: enums.py  events.py  models.py
backend/src/engine/: actions.py  background_executor.py  base_action.py  base_action_handler.py  base_chat_moderator.py  base_moderator.py  base_stream.py  chat_moderator.py  chat_stream.py  deployment_listener.py  models.py  prompt_validator.py  task_pool.py
backend/src/engine/discord/: action_handler.py  actions.py  chat_moderator.py  chat_stream.py  config.py  context.py  moderator.py  stream.py
backend/src/infra/: __init__.py  discord_action_manager.py  discord_client_manager.py  kafka_manager.py
backend/src/resources/: action-definitions.openapi.json  models.json  rsp.json  system-prompt.txt
backend/src/server/: app.py  dependencies.py  typing.py
backend/src/utils/: db.py  kafka.py  llm.py
docker/: Dockerfile  (+2 more)
(+129 files in other folders)
