[project]
name = "ai-chat-moderation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.0",
    "aiokafka>=0.12.0",
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "discord-py>=2.6.4",
    "fastapi>=0.119.0",
    "kafka-python>=2.2.15",
    "pgvector>=0.4.1",
    "psycopg2>=2.9.11",
    "pydantic[email]>=2.12.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.1",
    "sqlalchemy>=2.0.44",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "uvicorn>=0.37.0",
]
